@@ -54,5 +54,7 @@
  1-Dec-2018    V0.30  Adjustments for roundtrip CI/CD
  2-Dec-2018    V0.31 Fixes for expansion of semi-colon separated value types, add methods to
                include NCBI scientific and common names.
- 3-Dec-2018.   V0.32a interim update for troubleshooting entity collection load issues.
+ 3-Dec-2018.   V0.32 interim update for troubleshooting entity collection load issues, adding search indices
+               for core collections, adding optional private identifier chemical component identifiers for non-polymer
+               entities, adjustments to bird core citation schema.
 
